[package]
name = "tes3edit"
version = "0.1.0"
authors = ["Moritz Baron  <r.fuzzo@gmail.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
  #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui-notify = "0.6"
rfd = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dependencies.tes3]
git = "https://github.com/rfuzzo/tes3"
branch = "remove-zstd"
# path = "/Users/ghost/Documents/Developer/tes3" # on mac
# path = "E:/GitHub/tes3conv/libs/tes3" # onpc
default-features = false
features = ["esp", "serde", "egui"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
