[package]
name = "tes3edit"
version = "1.0.0-RC3"
authors = ["Moritz Baron  <r.fuzzo@gmail.com>"]
edition = "2021"
rust-version = "1.68"


[dependencies]
egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu,glow".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui-notify = { git = "https://github.com/ItsEthra/egui-notify" }
rfd = { version = "0.11.0", features = ["file-handle-inner"] }
serde = { version = "1", features = ["derive"] }
catppuccin-egui = "3.0"
strum = { version = "0.25", features = ["derive"] }
serde_yaml = "0.9"

[dependencies.tes3]
# git = "https://github.com/rfuzzo/tes3"
# branch = "egui_temp"
# path = "/Users/ghost/Documents/Developer/tes3" # on mac
path = "E:/GitHub/tes3"             # onpc
default-features = false
features = ["esp", "egui", "serde"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
#egui_file = "0.8"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
