[package]
name = "tes3edit"
version = "1.0.0-RC3"
authors = ["Moritz Baron  <r.fuzzo@gmail.com>"]
edition = "2021"


[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu,glow".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui-notify = "0.18"
rfd = { version = "0.15", features = ["file-handle-inner"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"

[dependencies.tes3]
path = "tes3"
default-features = false
features = ["esp", "serde", "egui"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
#egui_file = "0.8"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
